--- a/typescript/rest-fastify/package.json
+++ b/typescript/rest-fastify/package.json
@@ -6,12 +6,12 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.2.1",
+    "@prisma/client": "3.2.1-dev.1",
     "fastify": "3.22.0"
   },
   "devDependencies": {
     "@types/node": "14.17.27",
-    "prisma": "3.2.1",
+    "prisma": "3.2.1-dev.1",
     "ts-node": "10.3.0",
     "typescript": "4.4.4"
   },
