--- a/typescript/rest-nextjs-express/frontend/package.json
+++ b/typescript/rest-nextjs-express/frontend/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "3.2.1-dev.1",
     "next": "11.1.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/node": "14.17.27",
     "@types/react": "17.0.30",
+    "prisma": "3.2.1-dev.1",
     "ts-node": "10.3.0",
     "typescript": "4.4.4"
   }
