--- a/javascript/graphql-sdl-first/package.json
+++ b/javascript/graphql-sdl-first/package.json
@@ -9,13 +9,13 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "apollo-server": "3.4.0",
     "graphql": "15.6.1",
     "graphql-scalars": "1.12.0"
   },
   "devDependencies": {
-    "prisma": "3.3.0"
+    "prisma": "3.4.0-dev.23"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
