--- a/javascript/rest-fastify/package.json
+++ b/javascript/rest-fastify/package.json
@@ -6,11 +6,11 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "fastify": "3.22.1"
   },
   "devDependencies": {
-    "prisma": "3.3.0"
+    "prisma": "3.4.0-dev.23"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
