--- a/typescript/graphql-fastify-sdl-first/package.json
+++ b/typescript/graphql-fastify-sdl-first/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@graphql-tools/schema": "8.3.0",
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "fastify": "3.22.1",
     "graphql": "15.6.1",
     "graphql-scalars": "1.12.0",
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "14.17.32",
-    "prisma": "3.3.0",
+    "prisma": "3.4.0-dev.23",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
