--- a/typescript/graphql-fastify/package.json
+++ b/typescript/graphql-fastify/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server"
   },
   "dependencies": {
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "fastify": "3.22.1",
     "graphql": "15.6.1",
     "graphql-scalars": "1.12.0",
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@types/node": "16.4.13",
-    "typescript": "4.4.4",
+    "prisma": "3.4.0-dev.23",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
-    "prisma": "3.3.0"
+    "typescript": "4.4.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
