--- a/typescript/graphql-nextjs/package.json
+++ b/typescript/graphql-nextjs/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.4.16",
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "apollo-server-micro": "3.4.0",
     "express": "4.17.1",
     "graphql": "15.6.1",
@@ -35,8 +35,8 @@
     "@types/micro-cors": "0.1.2",
     "@types/node": "16.4.2",
     "@types/react": "17.0.33",
+    "prisma": "3.4.0-dev.23",
     "ts-node": "10.4.0",
-    "prisma": "3.3.0",
     "typescript": "4.4.4"
   },
   "prisma": {
