--- a/typescript/graphql-subscriptions/package.json
+++ b/typescript/graphql-subscriptions/package.json
@@ -16,14 +16,14 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@prisma/client": "3.3.0",
+    "@prisma/client": "3.4.0-dev.23",
     "apollo-server": "2.25.2",
     "graphql": "15.6.1",
     "nexus": "1.1.0"
   },
   "devDependencies": {
     "@types/node": "14.17.32",
-    "prisma": "3.3.0",
+    "prisma": "3.4.0-dev.23",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
